src/test/ui/issue-51714.stderr
error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:12:14
   |
LL |     |_:  [_; return || {}] | {};
   |              ^^^^^^^^^^^^

error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:15:10
   |
LL |     [(); return || {}];
   |          ^^^^^^^^^^^^

error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:18:10
   |
LL |     [(); return |ice| {}];
   |          ^^^^^^^^^^^^^^^

error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:21:10
   |
LL |     [(); return while let Some(n) = Some(0) {}];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0572`.
